Thu Sep 30 08:37:02 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* xapian-config.in: Add --static option which makes other options
	  report values for static linking.

Thu Sep 23 13:35:34 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac: Update for 1.0.22.

Thu Sep 23 13:20:40 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Thu Sep 23 04:44:34 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* queryparser/queryparser.lemony,tests/queryparsertest.cc: Allow phrase
	  generators between a probabilistic prefix and the term itself.

Mon Sep 20 13:53:22 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Mon Sep 20 08:26:31 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/flint/flint_modifiedpostlist.h: Fixes required to
	  build on OpenBSD 4.5 with GCC 3.3.5.

Mon Sep 20 08:21:54 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/deprecation.rst: Actually write down our guidelines for
	  supporting other software.

Mon Sep 20 08:18:59 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Add support for --enable-sse=sse and --enable-sse=sse2
	  to allow control of which SSE instructions to use.

Mon Sep 20 08:12:51 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/queryparser.h: Document cases where FLAG_WILDCARD and
	  FLAG_PARTIAL aren't currently supported.

Mon Aug 30 06:18:13 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Enable use of SSE maths on x86 by default with Sun's
	  compiler.

Mon Aug 30 05:21:24 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Beef up the test for whether -lm is required and add
	  a special case to force it to be for Sun's C++ compiler - there's
	  some interaction with libtool and/or shared objects which means