@@ -1,3 +1,12 @@
+Thu Sep 30 10:03:53 GMT 2010  Olly Betts <olly@survex.com>
+
+	* Backport change from trunk:
+	* common/document.h: Initialise docid to 0 when creating a document
+	  from scratch, as documented.
+	* tests/api_none.cc: Add regression test document2.
+	* include/xapian/document.h: Document that return value is unreliable
+	  in this case prior to the next 1.0 and 1.2 releases.
+
 Thu Sep 30 08:37:02 GMT 2010  Olly Betts <olly@survex.com>
 
 	* Backport change from trunk:
